--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<!-- <li class="nav-item"><a href="#blog-section" class="nav-link"><span>Blog</span></a></li> -->
 					<li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 				</ul>
-				<div class="nav-item btndownloaddiv"><a href="/Nofal Basan Resume.pdf" class="btndownload" download> <span
+				<div class="nav-item btndownloaddiv"><a href="./Nofal Basan Resume.pdf" class="btndownload" download> <span
 							style="color: white;"> Resume </span></a></div>
 			</div>
 		</div>
